Serialising Collections.emptyList()